--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  <nav class='app-navbar'>
+    <%= link_to "Sign out", destroy_user_session_url, method: 'delete' %>
+  </nav>
 <%= yield %>
 
 </body>
