--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -11,23 +11,24 @@
       <ul class="game-navigation">
         <li class='rewind'><%= link_to "Rewind", "#" %></li>
         <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
-        <li class='new-variation'><%= link_to "New variation of board", "#" %></li>
+        <li class='new-variation'><%= link_to "Test a variation of board", "#" %></li>
         <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
         <li class='fast-forward'><%= link_to "Fast forward", "#" %></li>
       </ul>
 
       <div class='game-board'></div>
-
     </div>
   </div>
 
-    <div class="online-users">
-      <h3>Who's watching</h3>
-      <ul class="users">
-      </ul>
-    </div>
+
+  <div class="online-users">
+    <h3>Who's watching</h3>
+    <ul class="users">
+    </ul>
+  </div>
 
   <aside class="review-container" style="width: 400px;">
     <div id="variation"></div>
   </aside>
+
 </div>
