--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -9,19 +9,21 @@
   <div id="master" class="game-container">
 
     <div class="actual-board-container">
-      <ul class="game-navigation">
-        <li class='rewind'><%= link_to "Rewind", "#" %></li>
-        <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
-        <li class='new-variation'><%= link_to "Test a variation of board", "#" %></li>
-        <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
-        <li class='fast-forward'><%= link_to "Fast forward", "#" %></li>
-      </ul>
 
       <div class='game-board'></div>
     </div>
 
   <aside class="board-features">
     <p>Status: <span id="status-master"></span></p>
+
+    <ul class="game-navigation">
+      <li class='rewind'><%= link_to "Rewind", "#" %></li>
+      <!-- <li class='move-backwards'><%#= link_to "Undo move", "#" %></li> -->
+      <li class='new-variation'><%= link_to "Test a variation of board", "#" %></li>
+      <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
+      <li class='fast-forward'><%= link_to "Fast forward", "#" %></li>
+    </ul>
+
     <div class='pgn-conatiner'>
       <ul id="pgn-master"></ul>
     </div>
