--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,24 +2,24 @@
 
 <div class="container">
   <div class="online-users">
-    <h3>Who's watching</h3>
+    <h3>Who's playing</h3>
     <ul class="users">
     </ul>
   </div>
   <div id="master" class="game-container">
-
     <div class="actual-board-container">
-
       <div class='game-board'></div>
     </div>
 
   <aside class="board-features">
-    <p>Status: <span id="status-master"></span></p>
+    <h1><%= @game.title %></h1>
+    <!-- <p class='board-status'>Status: <span id="status-master"></span></p> -->
 
     <ul class="game-navigation">
       <li class='rewind'><%= link_to "Rewind", "#" %></li>
-      <!-- <li class='move-backwards'><%#= link_to "Undo move", "#" %></li> -->
+      <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
       <li class='new-variation'><%= link_to "Test a variation of board", "#" %></li>
+      <li class='clear-board'><%= link_to "Clear board", "#" %></li>
       <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
       <li class='fast-forward'><%= link_to "Fast forward", "#" %></li>
     </ul>
