--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,6 +9,9 @@
 //Chessboard
 @import 'chessboard';
 
+//Ladda
+@import 'ladda.min';
+
 // Nav
 @import 'nav/nav';
 
@@ -17,3 +20,4 @@
 
 //Games
 @import 'games/game_show';
+
