--- a/app/views/games/review.html.erb
+++ b/app/views/games/review.html.erb
@@ -1,1 +1,5 @@
 <%= render 'board_layout', game: @game %>
+
+<aside class="review-container" style="width: 400px;">
+  <div id="variation"></div>
+</aside>
