--- a/app/assets/stylesheets/partials/_dry.css.scss
+++ b/app/assets/stylesheets/partials/_dry.css.scss
@@ -1,11 +1,11 @@
 body {
   background-color: $basecamp_background;
-  font-family: "futura-pt", Helvetica,Arial, sans-serif;
+  font-family: 'Droid Serif', serif;
 }
 
 @mixin hover-transition {
-  -webkit-transition: background-color .5s ease-out;
-  -moz-transition: background-color .5s ease-out;
-  -o-transition: background-color .5s ease-out;
-  transition: background-color .5s ease-out;
+  -webkit-transition: all .25s ease-out;
+  -moz-transition: all .25s ease-out;
+  -o-transition: all .25s ease-out;
+  transition: all .25s ease-out;
 }
