--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -2,7 +2,7 @@
 
 <%= form_tag review_game_url(@game.id), method: 'get' do %>
   <textarea></textarea>
-  <button class="ladda-button" data-style="contract" data-color="mint", data-spinner-color="white" id="submitPgn">
+  <button class="ladda-button" data-style="expand-right" data-color="mint", data-spinner-color="white" id="submitPgn">
     <span class="ladda-label">Submit</span>
   </button>
 <% end %>
