--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -1,24 +1,30 @@
 <div class="container">
   <div id="master" class="game-container">
+
     <div class="actual-board-container">
       <div class='game-board'></div>
+
+      <ul class="board-feature-links">
+        <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
+        <% unless @not_review %>
+          <li class='new-variation'><%= link_to "Test a variation", "#" %></li>
+        <% end %>
+      </ul>
     </div>
 
-    <ul class="users"></ul>
+    <!-- <ul class="users"></ul> -->
 
   <aside class="board-features">
     <h1><%= game.title %></h1>
 
     <ul class="game-navigation">
       <% if @not_review %>
-        <p class='board-status'>Status: <span id="status-master"></span></p>
         <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
-        <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
       <% else %>
-        <li class='fast-forward'><%= link_to "Fast forward", "#" %></li>
-        <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
-        <li class='new-variation'><%= link_to "Test a variation of board", "#" %></li>
-        <li class='rewind'><%= link_to "Rewind", "#" %></li>
+        <li class='beggining'><%= link_to "<i class=\"fa fa-caret-square-o-left fa-3x\"></i>".html_safe, "#" %></li>
+        <li class='rewind'><%= link_to "<i class=\"fa fa-angle-left fa-3x\"></i>".html_safe, "#" %></li>
+        <li class='fast-forward'><%= link_to "<i class=\"fa fa-angle-right fa-3x\"></i>".html_safe, "#" %></li>
+        <li class='end'><%= link_to "<i class=\"fa fa-caret-square-o-right fa-3x\"></i>".html_safe, "#" %></li>
       <% end %>
     </ul>
 
@@ -26,7 +32,7 @@
       <ul id="pgn-master"></ul>
     </div>
     <% if @not_review %>
-      <%= button_to review_game_url(game.id), method: 'get', class: 'ladda-button', data: {style: "contract", color: "mint"} do %>
+      <%= button_to review_game_url(game.id), method: 'get', class: 'ladda-button', data: {style: "expand-right", color: "mint"} do %>
         <span class="ladda-label">Submit</span>
       <% end %>
     <% end %>
