--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -6,6 +6,10 @@
 //Gems
 @import 'font-awesome';
 
+//Morph Button
+@import 'morph_button/content';
+@import 'morph_button/component';
+
 //Chessboard
 @import 'chessboard';
 
