--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,9 @@
     var MyChess = {};
     MyChess.config = {
       websocketUrl: "<%= request.host %>:<%= request.port %>/websocket",
+      isGame: <%= current_page?(game_url(params[:id] || 1)) %> || <%= current_page?(review_game_url(params[:id] || 1)) %>,
       isReview: <%= current_page?(review_game_url(params[:id] || 1)) %>,
-      gameId: <%= @game.present? ? @game.id : "null" %>
+      gameId: <%= @game.try(:id) || "null" %>
     }
   </script>
 </head>
