--- a/app/assets/stylesheets/morph_button/component.css.scss
+++ b/app/assets/stylesheets/morph_button/component.css.scss
@@ -81,10 +81,16 @@
   color: #e75854;
 }
 
+// .morph-button-modal-2.open .morph-content {
+//   margin: -210px 0 0 -170px;
+//   width: 340px;
+//   height: 420px;
+// }
+
 .morph-button-modal-2.open .morph-content {
-  margin: -210px 0 0 -170px;
-  width: 340px;
-  height: 420px;
+  margin: -260px 0 0 -545px;
+  width: 80%;
+  height: 500px;
 }
 
 .morph-button-modal-2.open .morph-content > div {
