--- a/app/assets/stylesheets/morph_button/content.css.scss
+++ b/app/assets/stylesheets/morph_button/content.css.scss
@@ -79,6 +79,7 @@
   color: #b09a86;
   font-weight: 300;
   font-size: 2.2em;
+  height: 250px;
 }
 
 .content-style-form textarea:focus {
@@ -94,7 +95,7 @@
   display: block;
   margin-top: 2.5em;
   padding: 1.5em;
-  width: 100%;
+  width: 50%;
   border: none;
   background: #e75854;
   color: #f9f6e5;
@@ -102,6 +103,7 @@
   letter-spacing: 1px;
   font-weight: 800;
   font-size: 1.25em;
+  margin: 0 auto;
 }
 
 .content-style-form .icon-close {
