--- a/app/views/games/_variation_button_modal.html.erb
+++ b/app/views/games/_variation_button_modal.html.erb
@@ -1,7 +1,7 @@
 <li class='new-variation'>
-  <div class="mockup-content">
+  <div class="mockup-content variation-morph">
     <div class="morph-button morph-button-modal morph-button-modal-2 morph-button-fixed">
-    <button type="button">Test a variation</button>
+    <button type="button" class='variation-button'>Test a variation</button>
       <div class="morph-content">
         <div>
           <div class="content-style-form content-style-form-1">
