--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -22,10 +22,10 @@
       <% if @not_review %>
         <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
       <% else %>
-        <li class='beg'><%= link_to "<i class=\"fa fa-angle-double-left fa-3x\"></i>".html_safe, "#" %></li>
+        <li class='beg'><%= link_to "<i class=\"fa fa-step-backward fa-3x\"></i>".html_safe, "#" %></li>
         <li class='rewind'><%= link_to "<i class=\"fa fa-angle-left fa-3x\"></i>".html_safe, "#" %></li>
         <li class='fast-forward'><%= link_to "<i class=\"fa fa-angle-right fa-3x\"></i>".html_safe, "#" %></li>
-        <li class='end'><%= link_to "<i class=\"fa fa-angle-double-right fa-3x\"></i>".html_safe, "#" %></li>
+        <li class='end'><%= link_to "<i class=\"fa fa-step-forward fa-3x\"></i>".html_safe, "#" %></li>
       <% end %>
     </ul>
 
