--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -10,7 +10,7 @@
 
           <%= form_tag games_url, method: 'post', id: "uploadPgn" do %>
             <p><label>PGN</label><textarea></textarea></p>
-            <button class="ladda-button" data-style="expand-right" data-spinner-color="white">
+            <button class="ladda-button spinner" data-style="expand-right" data-spinner-color="white">
               <span class="ladda-label">Submit</span>
             </button>
 
