--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -1,50 +1,53 @@
 <div class="container">
-  <div id="master" class="game-container">
+    <div id="master" class="game-container">
 
-    <div class="actual-board-container">
-      <div class='game-board'></div>
+      <div class="actual-board-container">
+          <div class='game-board'></div>
 
-      <ul class="board-feature-links">
-        <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
-        <% unless @not_review %>
-          <!-- <li class='new-variation'><%#= link_to "Test a variation", "#" %></li> -->
-          <%= render 'variation_button_modal' %>
+        <ul class="board-feature-links">
+          <li class='flip-orientation'><%= link_to "Flip Board", "#" %></li>
+          <% unless @not_review %>
+            <!-- <li class='new-variation'><%#= link_to "Test a variation", "#" %></li> -->
+            <%= render 'variation_button_modal' %>
+          <% end %>
+        </ul>
+      </div>
+
+      <ul class="users"></ul>
+
+    <aside class="board-features">
+      <h1><%= game.title %></h1>
+
+      <ul class="game-navigation">
+        <% if @not_review %>
+          <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
+        <% else %>
+          <li class='beg'><%= link_to "<i class=\"fa fa-step-backward fa-3x\"></i>".html_safe, "#" %></li>
+          <li class='rewind'><%= link_to "<i class=\"fa fa-angle-left fa-3x\"></i>".html_safe, "#" %></li>
+          <li class='fast-forward'><%= link_to "<i class=\"fa fa-angle-right fa-3x\"></i>".html_safe, "#" %></li>
+          <li class='end'><%= link_to "<i class=\"fa fa-step-forward fa-3x\"></i>".html_safe, "#" %></li>
         <% end %>
       </ul>
-    </div>
 
-    <!-- <ul class="users"></ul> -->
+      <div class='pgn-conatiner'>
+        <ul id="pgn-master"></ul>
+      </div>
 
-  <aside class="board-features">
-    <h1><%= game.title %></h1>
-
-    <ul class="game-navigation">
       <% if @not_review %>
-        <li class='move-backwards'><%= link_to "Undo move", "#" %></li>
-      <% else %>
-        <li class='beg'><%= link_to "<i class=\"fa fa-step-backward fa-3x\"></i>".html_safe, "#" %></li>
-        <li class='rewind'><%= link_to "<i class=\"fa fa-angle-left fa-3x\"></i>".html_safe, "#" %></li>
-        <li class='fast-forward'><%= link_to "<i class=\"fa fa-angle-right fa-3x\"></i>".html_safe, "#" %></li>
-        <li class='end'><%= link_to "<i class=\"fa fa-step-forward fa-3x\"></i>".html_safe, "#" %></li>
+        <%= button_to review_game_url(game.id), method: 'get', class: 'spinner ladda-button', data: {style: "expand-right", color: "mint"} do %>
+          <span class="ladda-label">Submit</span>
+        <% end %>
       <% end %>
-    </ul>
+    </aside>
 
-    <div class='pgn-conatiner'>
-      <ul id="pgn-master"></ul>
     </div>
-    <% if @not_review %>
-      <%= button_to review_game_url(game.id), method: 'get', class: 'spinner ladda-button', data: {style: "expand-right", color: "mint"} do %>
-        <span class="ladda-label">Submit</span>
-      <% end %>
-    <% end %>
-  </aside>
-
   <aside class="notes">
     <textarea></textarea>
     <%= link_to "Submit", "#", id: "noteSubmit" %>
 
     <ul class="notes-list"></ul>
   </aside>
-  </div>
 </div>
+
+
 
