--- a/app/views/games/_variation_button_modal.html.erb
+++ b/app/views/games/_variation_button_modal.html.erb
@@ -7,11 +7,7 @@
           <div class="content-style-form content-style-form-1">
             <span class="icon icon-close" id="closeVariation">Close the dialog</span>
             <h2>Variation</h2>
-            <div class="variation-container">
-              <aside class="review-container">
-                <div id="variation"></div>
-              </aside>
-            </div>
+            lol
           </div>
         </div>
       </div>
