--- a/app/views/games/_board_layout.html.erb
+++ b/app/views/games/_board_layout.html.erb
@@ -1,4 +1,5 @@
 <div class="container">
+  <div class="master-notes-container">
     <div id="master" class="game-container">
       <div class="actual-board-container">
         <ul class="board-feature-links">
@@ -37,10 +38,11 @@
 
     <ul class="notes-list"></ul>
   </aside>
+</div>
 
   <div class="variation-container">
     <aside class="review-container">
-      <div id="variation" style="width: 400px;">
+      <div id="variation">
         <div class='game-board'></div>
       </div>
     </aside>
@@ -55,3 +57,4 @@
 <!-- <div class='pgn-conatiner'>
   <ul id="pgn-master"></ul>
 </div> <!-- pgn-container -->
+
