--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,8 +6,9 @@
   <%= csrf_meta_tags %>
   <script>
     var MyChess = {};
+    <% if  %>
     MyChess.config = {
-      websocketUrl: "<%= request.host %>:<%= request.port %>/websocket",
+      websocketUrl: "<%= request.host %>:<%= request.port %>/websocket" || "chess-explained.herokuapp.com/websocket",
       isGame: <%= current_page?(game_url(params[:id] || 1)) %> || <%= current_page?(review_game_url(params[:id] || 1)) %>,
       isReview: <%= current_page?(review_game_url(params[:id] || 1)) %>,
       gameId: <%= @game.try(:id) || "null" %>
